@@ -35,12 +35,29 @@ public class ASRExecutorTest extends JArmEmuTest {
         assertEquals(-1, r1.getData());
     }
 
-    //@Test
+    @Test
     public void flagsTest() {
         Register r0 = stateContainer.registers[0];
         Register r1 = stateContainer.registers[1];
+        Register r2 = stateContainer.registers[2];
         r0.setData(25);
         r1.setData(-25);
+        r2.setData(-25);
+        asrExecutor.execute(stateContainer, true, null, null, r2, r2, 1, null);
+        assertEquals(-13, r2.getData());
+        assertTrue(stateContainer.cpsr.getN());
+        assertFalse(stateContainer.cpsr.getZ());
+        assertTrue(stateContainer.cpsr.getC());
+        asrExecutor.execute(stateContainer, true, null, null, r2, r2, 1, null);
+        assertEquals(-7, r2.getData());
+        assertTrue(stateContainer.cpsr.getN());
+        assertFalse(stateContainer.cpsr.getZ());
+        assertTrue(stateContainer.cpsr.getC());
+        asrExecutor.execute(stateContainer, true, null, null, r2, r2, 1, null);
+        assertEquals(-4, r2.getData());
+        assertTrue(stateContainer.cpsr.getN());
+        assertFalse(stateContainer.cpsr.getZ());
+        assertTrue(stateContainer.cpsr.getC());
         asrExecutor.execute(stateContainer, true, null, null, r0, r0, 3, null);
         assertEquals(3, r0.getData());
         assertFalse(stateContainer.cpsr.getN());
