@@ -12,3 +12,4 @@
 - Legacy Parser now works when selected in the drop down menu (its use is still not recommended nonetheless)
 - RRX as an instruction is now fully supported
 - S condition now update all flags on ROR instruction
+- ASR carry flag should now work correctly
